# edwebserver

./: .gitignore  CMakeLists.txt  File_description_exception.h  README  main.cpp  method.h  request.cpp  request.h  response.cpp  response.h  web_directory.cpp  web_directory.h
www/: content.html  index.html  script.js  style.css
