cmake_minimum_required(VERSION 2.8)
project(EdWebserver)
set(EdWebserver_MAJOR_VERSION 0)
set(EdWebserver_MINOR_VERSION 1)
set(EdWebserver_PATCH_VERSION 0)
set(EdWebserver_VERSION
  ${EdWebserver_MAJOR_VERSION}.${EdWebserver_MINOR_VERSION}.${EdWebserver_PATCH_VERSION})
set(Boost_USE_STATIC_LIBS OFF) 
set(Boost_USE_MULTITHREADED ON)  
set(Boost_USE_STATIC_RUNTIME OFF) 
set (CMAKE_CXX_STANDARD 11)
find_package(Boost COMPONENTS regex)
include_directories(${Boost_INCLUDE_DIRS}) 
find_package (Threads)

add_executable (edwebserver main.cpp web_directory.cpp response.cpp request.cpp)
target_link_libraries(edwebserver ${CMAKE_THREAD_LIBS_INIT} ${Boost_REGEX_LIBRARY} ${Threads})
target_compile_features(edwebserver PRIVATE cxx_range_for)
